--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["uv_build >= 0.7.19, < 0.9.0"]
 build-backend = "uv_build"
 
 [project]
-name = "datacollective"
-version = "0.0.23"
+name = "mdc-dlp"
+version = "0.0.1a0"
 dependencies = [
     "pandas>=2.0.0",
     "python-dotenv>=1.0.0",
     "requests>=2.0.0",
 ]
 authors = [
-    { name="Mozilla Data Collective", email="mozilladatacollective@mozillafoundation.org"},
+    { name="Sarthak Bisht", email="sbisht@cs.cmu.edu"},
 ]
 description = "A Python package for interfacing with the Mozilla Data Collective's API"
 readme = "README.md"
@@ -35,8 +35,8 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Mozilla-Data-Collective/datacollective-python"
-Issues = "https://github.com/Mozilla-Data-Collective/datacollective-python/issues"
+Homepage = "https://github.com/BishtSarthak/mdc-dlp/"
+Issues = "https://github.com/BishtSarthak/mdc-dlp/issues"
 
 [project.scripts]
 format = "black:patched_main"
@@ -121,7 +121,7 @@ search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
 
 [[tool.bump2version.files]]
-filename = "src/datacollective/__init__.py"
+filename = "src/mdc_dlp/__init__.py"
 search = '__version__ = "{current_version}"'
 replace = '__version__ = "{new_version}"'
 
